# perf-forge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  opencode.json
.github/workflows/: codspeed.yml  lint.yml
python-benches/: pyproject.toml
python-benches/tests/: test_cpu_simulation.py  test_memory.py  test_variance.py
rust-benches/: Cargo.toml
rust-benches/benches/: 01_cpu_simulation.rs  02_walltime.rs  03_memory.rs  04_cycle_estimation.rs  05_flamegraph.rs  06_variance.rs  07_allocator.rs
